finished user api
