# src/routes/users.ts
@@ -9,8 +9,18 @@ type User = {
 
 export interface IResponse {
   error?: string;
-  data?: User | User[];
+  data?: User | User[] | null;
 }
+
+export const getUserById = async (id: number): Promise<IResponse> => {
+  const user: User | null = await Client.user.findUnique({
+    where: {
+      id
+    }
+  });
+
+  return { data: user };
+};
 
 export const getAllUsers = async (size: number, page: number): Promise<IResponse> => {
   const shouldSkip = page * size > size;
@@ -28,11 +38,7 @@ export const getAllUsers = async (size: number, page: number): Promise<IResponse
   return { data: users };
 };
 
-export const createUser = async (data: {
-  username: string;
-  first_name: string;
-  last_name: string;
-}): Promise<IResponse> => {
+export const createUser = async (data: User): Promise<IResponse> => {
   const { username, first_name, last_name } = data;
 
   if (username === '') return { error: 'Username is required' };
@@ -45,6 +51,27 @@ export const createUser = async (data: {
       first_name,
       last_name
     }
+  });
+
+  return {
+    data: res
+  };
+};
+
+export const updateUser = async (id: number, data: User): Promise<IResponse> => {
+  const user: User | null = await Client.user.findUnique({
+    where: {
+      id
+    }
+  });
+
+  if (!user) return { error: 'User not found' };
+
+  const res = await Client.user.update({
+    where: {
+      id
+    },
+    data
   });
 
   return {
